# flyappy_autonomy_game

./: .gitignore  README.md
flyappy_autonomy_code/: CMakeLists.txt  package.xml
flyappy_autonomy_code/include/flyappy_autonomy_code/: flyappy.hpp  flyappy_ros.hpp
flyappy_autonomy_code/include/flyappy_autonomy_code/agent/: flyappy.hpp  system_dynamics.hpp
flyappy_autonomy_code/include/flyappy_autonomy_code/controller/: lqr_controller.hpp  mpc_controller.hpp  pid_controller.hpp
flyappy_autonomy_code/include/flyappy_autonomy_code/perception/: gate_detection.hpp
flyappy_autonomy_code/include/flyappy_autonomy_code/state_estimation/: kalman_filter.hpp  state_estimation.hpp
flyappy_autonomy_code/include/flyappy_autonomy_code/utils/: constants.hpp  conversion.hpp  maths.hpp
flyappy_autonomy_code/scripts/: mpc_tuning.py
flyappy_autonomy_code/src/: flyappy.cpp  flyappy_ros.cpp
flyappy_autonomy_code/src/agent/: flyappy.cpp  system_dynamics.cpp
flyappy_autonomy_code/src/controller/: lqr_controller.cpp  mpc_controller.cpp  pid_controller.cpp
flyappy_autonomy_code/src/perception/: gate_detection.cpp
flyappy_autonomy_code/src/state_estimation/: state_estimation.cpp
flyappy_autonomy_code/src/utils/: conversion.cpp  maths.cpp
flyappy_autonomy_code/tests/: CMakeLists.txt  test_my_feature.cpp
